--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "@chakra-ui/react": "^3.21.0",
     "@emotion/react": "^11.14.0",
+    "bcryptjs": "^3.0.2",
+    "crypto-js": "^4.2.0",
     "next-themes": "^0.4.6",
     "primeicons": "^7.0.0",
     "react": "^19.1.0",
