--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,13 +12,18 @@
   "dependencies": {
     "@chakra-ui/react": "^3.21.0",
     "@emotion/react": "^11.14.0",
+    "axios": "^1.10.0",
     "bcryptjs": "^3.0.2",
     "crypto-js": "^4.2.0",
+    "dotenv": "^17.2.0",
+    "katex": "^0.16.22",
     "next-themes": "^0.4.6",
     "primeicons": "^7.0.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
+    "react-katex": "^3.1.0",
+    "react-markdown": "^10.1.0",
     "react-router-dom": "^7.6.0"
   },
   "devDependencies": {
